# coworker

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  LLM_REFACTORING_DOCS.md  build_dmg.sh  justfile  run.sh  stop.sh
backend/: .env.example  alembic.ini  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: reader.py  sub_agent.py
backend/app/agents/presets/: coder.py  planner.py  researcher.py  reviewer.py  (+1 more)
backend/app/models/: db.py  schemas.py
backend/app/routers/: app_settings.py  chat.py  memory.py  sessions.py
backend/app/services/: classification.py  cli_service.py  session_service.py  settings_service.py  stream_service.py  upload_service.py
backend/migrations/: env.py
backend/migrations/versions/: 2407c574578e_add_timing_columns_to_runs.py  80a5ace788b6_add_fk_agent_message_run_id.py  a1b2c3d4e5f6_add_response_to_runs.py  a2b3c4d5e6f7_add_global_memories.py  bdf9c29f78a5_initial_tables.py  c1d2e3f4a5b6_add_progress_to_runs.py  e5f6a7b8c9d0_add_custom_roles_to_sessions.py  f27a2374a8c2_add_llm_provider_and_llm_model.py
backend/tests/: conftest.py  test_api_chat.py  test_api_sessions.py  test_attach.py  test_background.py  test_cancel.py  test_classification.py  test_classification_llm.py  test_cli_file_flags.py  test_cli_service.py  test_context_assembler.py  test_e2e_playwright.py  test_parallel_ui.py  test_presets.py  test_reader.py  test_session_service.py  test_solo_e2e.py  test_sse.py  test_sse_refined.py  test_sub_agent.py  test_team_e2e.py  test_team_intelligent_classification.py  test_team_orchestration.py  test_upload.py
(+52 files in other folders)
